--- a/src/app/modules/register/bailleur-register/pages/bailleur-register/bailleur-register.component.html
+++ b/src/app/modules/register/bailleur-register/pages/bailleur-register/bailleur-register.component.html
@@ -46,8 +46,7 @@
             </a>
           </li>
   
-          <li class="relative pr-8 sm:pr-20">
-            <!-- Completed Step -->
+        <!--  <li class="relative pr-8 sm:pr-20">
             <div class="absolute inset-0 flex items-center" aria-hidden="true">
               <div class="h-0.5 w-full bg-gray-200"></div>
             </div>
@@ -65,7 +64,7 @@
   
               <span class="sr-only">Step 2</span>
             </a>
-          </li>
+          </li> -->
   
           <li class="relative pr-8 sm:pr-20">
             <!-- Current Step -->
@@ -75,16 +74,16 @@
             <a routerLink="/register/bailleur/address" routerLinkActive="dotted-color"
               class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-indigo-200 rounded-full"
               aria-current="step">
-              <svg *ngIf="activeRoute=='/register/address'; else rad" class="w-5 h-5 text-white"
+              <svg *ngIf="activeRoute=='/register/bailleur/address'; else rad" class="w-5 h-5 text-white"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd"
                   d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                   clip-rule="evenodd" />
               </svg>
               <ng-template #rad>
-                <span class=" rounded-full" aria-hidden="true">3</span>
+                <span class=" rounded-full" aria-hidden="true">2</span>
               </ng-template>
-              <span class="sr-only">Step 3</span>
+              <span class="sr-only">Step 2</span>
             </a>
           </li>
   
@@ -96,16 +95,16 @@
             <a routerLink="/register/bailleur/another" routerLinkActive="dotted-color"
               class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-indigo-200 rounded-full"
               aria-current="step">
-              <svg *ngIf="activeRoute=='/register/another'; else ran" class="w-5 h-5 text-white"
+              <svg *ngIf="activeRoute=='/register/bailleur/another'; else ran" class="w-5 h-5 text-white"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd"
                   d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                   clip-rule="evenodd" />
               </svg>
               <ng-template #ran>
-                <span class=" rounded-full" aria-hidden="true">4</span>
+                <span class=" rounded-full" aria-hidden="true">3</span>
               </ng-template>
-              <span class="sr-only">Step 4</span>
+              <span class="sr-only">Step 3</span>
             </a>
           </li>
   
@@ -117,16 +116,16 @@
             <a routerLink="/register/bailleur/property" routerLinkActive="dotted-color"
               class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
               <!-- Heroicon name: solid/check -->
-              <svg *ngIf="activeRoute=='/register/property'; else rp" class="w-5 h-5 text-white"
+              <svg *ngIf="activeRoute=='/register/bailleur/property'; else rp" class="w-5 h-5 text-white"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd"
                   d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                   clip-rule="evenodd" />
               </svg>
               <ng-template #rp>
-                <span class=" rounded-full" aria-hidden="true">5</span>
+                <span class=" rounded-full" aria-hidden="true">4</span>
               </ng-template>
-              <span class="sr-only">Step 5</span>
+              <span class="sr-only">Step 4</span>
             </a>
           </li>
   
@@ -135,19 +134,19 @@
             <div class="absolute inset-0 flex items-center" aria-hidden="true">
               <div class="h-0.5 w-full bg-indigo-600"></div>
             </div>
-            <a routerLink="/register/bailleur/recouvrement" routerLinkActive="dotted-color"
+            <a routerLink="/register/bailleur/activity" routerLinkActive="dotted-color"
               class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
-              <svg *ngIf="activeRoute=='/register/recouvrement'; else rr" class="w-5 h-5 text-white"
+              <svg *ngIf="activeRoute=='/register/bailleur/activity'; else rr" class="w-5 h-5 text-white"
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd"
                   d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                   clip-rule="evenodd" />
               </svg>
               <ng-template #rr>
-                <span class=" rounded-full" aria-hidden="true">6</span>
+                <span class=" rounded-full" aria-hidden="true">5</span>
               </ng-template>
   
-              <span class="sr-only">Step 6</span>
+              <span class="sr-only">Step 5</span>
             </a>
           </li>
   
