--- a/src/app/modules/register/bailleur-register/pages/steps/address/address.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/address/address.component.html
@@ -105,7 +105,7 @@
            </div>
            <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
             <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
-                <a (click)="returnToActivity()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
+                <a (click)="returnToAbout()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
                   <img src="../../../../../../assets/images/precedent.svg" />
                 </a>
               
