--- a/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
@@ -153,7 +153,7 @@
     </fieldset>
     <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
       <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
-        <a (click)="returnToAbout()"
+        <a (click)="returnToProperty()"
           class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
           <img src="../../../../../../assets/images/precedent.svg" />
         </a>
@@ -161,9 +161,9 @@
       </div>
       <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
 
-        <button type="button" (click)="goToAddress()"
+        <button type="button" (click)="goToLogin()"
           class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
-          Suivant
+          Commencer à postuler
         </button>
       </div>
     </div>
