--- a/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
@@ -97,7 +97,7 @@
               </div>
                <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
                 
-                <button type="button" (click)="goToRecouvrement()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                <button type="button" (click)="goToActivity()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
                     Suivant
                   </button>
               </div>
