file upload done

--- a/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
@@ -21,9 +21,9 @@
       </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="firstName" class="block text-sm font-medium text-gray-700">Nom</label>
-        <input type="text" name="firstName"  [ngClass]=" firstName?.invalid && firstName?.touched ? 'border-red-500' : 'border-blue-100'" placeholder="Votre nom" id="firstName" autocomplete="firstName"
+        <input type="text" name="firstName"  [ngClass]=" (firstName?.invalid && firstName?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="Votre nom" id="firstName" autocomplete="firstName"
           formControlName="firstName"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
           <span class="text-red-600"
           *ngIf="(firstName?.dirty || firstName?.touched) && firstName?.invalid && firstName?.errors?.required"
         >
@@ -35,7 +35,7 @@
         <label for="lastName" class="block text-sm font-medium text-gray-700">Prénom</label>
         <input  [ngClass]=" (lastName?.dirty || lastName?.touched) && lastName?.invalid && lastName?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="text" name="lastName" placeholder="Votre prénom" id="lastName" autocomplete="lastName"
           formControlName="lastName"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
           <span class="text-red-600"
           *ngIf="(lastName?.dirty || lastName?.touched) && lastName?.invalid && lastName?.errors?.required"
         >
@@ -46,7 +46,7 @@
       <div class="col-span-6 sm:col-span-3">
         <label for="birth" class="block text-sm font-medium text-gray-700">Date de naissance</label>
         <input  [ngClass]="(birth?.dirty || birth?.touched) && birth?.invalid && birth?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="date" name="birth" id="birth" autocomplete="birth" formControlName="birth"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
           <span class="text-red-600"
           *ngIf="(birth?.dirty || birth?.touched) && birth?.invalid && birth?.errors?.required"
         >
@@ -57,7 +57,7 @@
       <div class="col-span-6 sm:col-span-3">
         <label for="locality" class="block text-sm font-medium text-gray-700">NPA/Localité</label>
         <input   [ngClass]=" (locality?.dirty || locality?.touched) && locality?.invalid && locality?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="text" name="locality" id="locality" autocomplete="locality" placeholder="NPA/Localité" formControlName="locality"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
           <span class="text-red-600"
           *ngIf="(locality?.dirty || locality?.touched) && locality?.invalid && locality?.errors?.required"
         >
@@ -67,7 +67,7 @@
       <div class="col-span-6 sm:col-span-3">
         <label for="address" class="block text-sm font-medium text-gray-700">Adresse actuelle</label>
         <input  [ngClass]=" (address?.dirty || address?.touched) && address?.invalid && address?.errors?.required? 'border-red-500' : 'border-blue-100'" type="text" name="address" id="address" autocomplete="address" placeholder="Adresse" formControlName="address"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
           <span class="text-red-600"
           *ngIf="(address?.dirty || address?.touched) && address?.invalid && address?.errors?.required"
         >
@@ -78,7 +78,7 @@
         <label for="domiciledSince" class="block text-sm font-medium text-gray-700">Domicilié depuis</label>
         <input  [ngClass]=" (domiciledSince?.dirty || domiciledSince?.touched) && domiciledSince?.invalid && domiciledSince?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="date" name="domiciledSince" id="domiciledSince" autocomplete="domiciledSince"
           formControlName="domiciledSince"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
           <span class="text-red-600"
           *ngIf="(domiciledSince?.dirty || domiciledSince?.touched) && domiciledSince?.invalid && domiciledSince?.errors?.required"
         >
@@ -126,7 +126,7 @@
         <label for="phoneNumber" class="block text-sm font-medium text-gray-700">Téléphone</label>
         <input  [ngClass]=" (phoneNumber?.dirty || phoneNumber?.touched) && phoneNumber?.invalid && phoneNumber?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="text" name="phoneNumber" placeholder="Votre numéro de téléphone" id="phoneNumber"
           autocomplete="phoneNumber" formControlName="phoneNumber"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
           <span class="text-red-600"
           *ngIf="(phoneNumber?.dirty || phoneNumber?.touched) && phoneNumber?.invalid && phoneNumber?.errors?.required"
         >
@@ -138,7 +138,7 @@
         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
         <input  [ngClass]=" (email?.dirty || email?.touched) && email?.invalid && email?.errors?.required ? 'border-red-500' : 'border-blue-100'" type="email" placeholder="Votre adresse email" name="email" id="email" autocomplete="email"
           formControlName="email"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
           <span class="text-red-600"
           *ngIf="(email?.dirty || email?.touched) && email?.invalid && email?.errors?.required"
         >
@@ -149,7 +149,7 @@
     <div>
       <div class="space-y-8 divide-y divide-gray-200">
         <div class=" py-3 text-right sm:px-6">
-          <button type="button" (click)="goToActivity()" [disabled]="!aboutForm.valid  || (progress$|async)!==100"
+          <button type="button" (click)="goToActivity()" [disabled]="!aboutForm.valid"
             class="inline-flex  items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
             Suivant
           </button>
