--- a/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
@@ -4,50 +4,71 @@
     <div class="grid grid-cols-6 gap-6">
       <div class="col-span-6 sm:col-span-3">
         <label for="profession" class="block text-sm font-medium text-gray-700">Profession</label>
-        <input type="text" name="profession" formControlName="profession" placeholder="Votre profession" id="profession"
+        <input type="text" [ngClass]=" (profession?.invalid && profession?.touched) ? 'border-red-500' : 'border-blue-100'" name="profession" formControlName="profession" placeholder="Votre profession" id="profession"
           autocomplete="given-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
+          <span class="text-red-600" *ngIf="(profession?.dirty || profession?.touched) && profession?.invalid && profession?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+          </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="professionDate" class="block text-sm font-medium text-gray-700">Depuis</label>
-        <input type="date" name="professionDate" formControlName="professionDate" id="professionDate"
+        <input type="date" [ngClass]=" (professionDate?.invalid && professionDate?.touched) ? 'border-red-500' : 'border-blue-100'" name="professionDate" formControlName="professionDate" id="professionDate"
           autocomplete="given-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(professionDate?.dirty || professionDate?.touched) && professionDate?.invalid && professionDate?.errors?.required" >
+            Date Obligatoire.
+          </span>
+        </div>
 
       <div class="col-span-6 sm:col-span-3">
         <label for="employer" class="block text-sm font-medium text-gray-700">Employeur</label>
-        <input type="text" name="employer" formControlName="employer" placeholder="Employeur" id="employer"
+        <input type="text" [ngClass]=" (employer?.invalid && employer?.touched) ? 'border-red-500' : 'border-blue-100'" name="employer" formControlName="employer" placeholder="Employeur" id="employer"
           autocomplete="family-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
+          <span class="text-red-600" *ngIf="(employer?.dirty || employer?.touched) && employer?.invalid && employer?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+        </div>
 
       <div class="col-span-6 sm:col-span-3">
         <label for="workplace" class="block text-sm font-medium text-gray-700">Lieu de travail</label>
-        <input type="text" name="workplace" formControlName="workplace" id="workplace"
+        <input type="text" [ngClass]=" (workplace?.invalid && workplace?.touched) ? 'border-red-500' : 'border-blue-100'" name="workplace" formControlName="workplace" id="workplace"
           placeholder="Votre lieu de travail" autocomplete="given-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(workplace?.dirty || workplace?.touched) && workplace?.invalid && workplace?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+        </div>
 
       <div class="col-span-6 sm:col-span-3">
         <label for="contactPerson" class="block text-sm font-medium text-gray-700">Personne de contact</label>
-        <input type="text" name="contactPerson" formControlName="contactPerson" placeholder="Votre personne de contact"
+        <input type="text" [ngClass]=" (contactPerson?.invalid && contactPerson?.touched) ? 'border-red-500' : 'border-blue-100'" name="contactPerson" formControlName="contactPerson" placeholder="Votre personne de contact"
           id="contactPerson" autocomplete="family-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(contactPerson?.dirty || contactPerson?.touched) && contactPerson?.invalid && contactPerson?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+        </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="professionalPhoneNumber" class="block text-sm font-medium text-gray-700">Téléphone
           professionnel</label>
-        <input type="text" placeholder="+41" name="professionalPhoneNumber" formControlName="professionalPhoneNumber"
+        <input type="text" [ngClass]=" (professionalPhoneNumber?.invalid && professionalPhoneNumber?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="+41" name="professionalPhoneNumber" formControlName="professionalPhoneNumber"
           id="professionalPhoneNumber" autocomplete="family-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
+          <span class="text-red-600" *ngIf="(professionalPhoneNumber?.dirty || professionalPhoneNumber?.touched) && professionalPhoneNumber?.invalid && professionalPhoneNumber?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+     </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="grossMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel brut</label>
-        <input type="text" name="grossMonthlyIncome" formControlName="grossMonthlyIncome" placeholder="0"
+        <input type="text" [ngClass]=" (grossMonthlyIncome?.invalid && grossMonthlyIncome?.touched) ? 'border-red-500' : 'border-blue-100'" name="grossMonthlyIncome" formControlName="grossMonthlyIncome" placeholder="0"
           id="grossMonthlyIncome" autocomplete="family-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        <div *ngIf=" grossMonthlyIncome?.invalid" class="text-left mt-1">
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(grossMonthlyIncome?.dirty || grossMonthlyIncome?.touched) && grossMonthlyIncome?.invalid && grossMonthlyIncome?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+          <div *ngIf=" grossMonthlyIncome?.invalid" class="text-left mt-1">
           <div class="text-red-600" *ngIf="grossMonthlyIncome?.errors?.inv">Montant brut ne correspond pas à celui de
             votre
             fiche de salaire {{gross}}</div>
@@ -57,9 +78,11 @@
         <label for="netMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel net</label>
         <input type="text" name="netMonthlyIncome" formControlName="netMonthlyIncome" placeholder="0"
           id="netMonthlyIncome" autocomplete="family-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-          [ngClass]="netMonthlyIncome?.invalid ? 'border-red-500' : 'border-blue-100'">
-
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md"
+          [ngClass]=" (netMonthlyIncome?.invalid && netMonthlyIncome?.touched) ? 'border-red-500' : 'border-blue-100'">
+          <span class="text-red-600" *ngIf="(netMonthlyIncome?.dirty || netMonthlyIncome?.touched) && netMonthlyIncome?.invalid && netMonthlyIncome?.errors?.required" >
+            Champ Obligatoire.
+          </span>
         <div *ngIf=" netMonthlyIncome?.invalid" class="text-left mt-1">
           <div class="text-red-600" *ngIf="netMonthlyIncome?.errors?.inv">Montant net ne correspond pas à celui de votre
             fiche de salaire {{net}}</div>
@@ -68,16 +91,22 @@
 
       <div class="col-span-6 sm:col-span-3">
         <label for="lastEmployer" class="block text-sm font-medium text-gray-700">Employeur précédent</label>
-        <input type="text" placeholder="Votre employeur précédent" name="lastEmployer" formControlName="lastEmployer"
+        <input type="text"  [ngClass]=" (lastEmployer?.invalid && lastEmployer?.touched) ? 'border-red-500' : 'border-blue-100'"  placeholder="Votre employeur précédent" name="lastEmployer" formControlName="lastEmployer"
           id="lastEmployer" autocomplete="given-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(lastEmployer?.dirty || lastEmployer?.touched) && lastEmployer?.invalid && lastEmployer?.errors?.required" >
+            Champ Obligatoire.
+          </span>
+        </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="lastEmployerSince" class="block text-sm font-medium text-gray-700">Depuis</label>
-        <input type="date" name="lastEmployerSince" formControlName="lastEmployerSince" id="lastEmployerSince"
+        <input type="date" [ngClass]=" (lastEmployerSince?.invalid && lastEmployerSince?.touched) ? 'border-red-500' : 'border-blue-100'" name="lastEmployerSince" formControlName="lastEmployerSince" id="lastEmployerSince"
           autocomplete="given-name"
-          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-      </div>
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+          <span class="text-red-600" *ngIf="(lastEmployerSince?.dirty || lastEmployerSince?.touched) && lastEmployerSince?.invalid && lastEmployerSince?.errors?.required" >
+            Date Obligatoire.
+          </span>
+        </div>
 
     </div>
     <fieldset class="mt-6">
