--- a/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
@@ -5,15 +5,30 @@
       <div class="grid grid-cols-6 gap-6">
         <div class="col-span-6 sm:col-span-6">
             <label for="currentDonor" class="block text-sm font-medium text-gray-700">Bailleur actuel</label>
-            <input type="text" placeholder="Votre bailleur actuel" name="currentDonor" formControlName="currentDonor" id="currentDonor" autocomplete="currentDonor" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <input type="text" [ngClass]=" (currentDonor?.invalid && currentDonor?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="Votre bailleur actuel" name="currentDonor" formControlName="currentDonor" id="currentDonor" autocomplete="currentDonor" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+            <span class="text-red-600"
+            *ngIf="(currentDonor?.dirty || currentDonor?.touched) && currentDonor?.invalid && currentDonor?.errors?.required"
+          >
+          Champ Obligatoire.
+          </span>
           </div>
           <div class="col-span-6 sm:col-span-3">
             <label for="numberOfPieces" class="block text-sm font-medium text-gray-700">Nombre de pièces</label>
-            <input type="number" placeholder="14" name="numberOfPieces" formControlName="numberOfPieces" id="numberOfPieces" autocomplete="numberOfPieces" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <input type="number" [ngClass]=" (numberOfPieces?.invalid && numberOfPieces?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="14" name="numberOfPieces" formControlName="numberOfPieces" id="numberOfPieces" autocomplete="numberOfPieces" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm  rounded-md">
+            <span class="text-red-600"
+            *ngIf="(numberOfPieces?.dirty || numberOfPieces?.touched) && numberOfPieces?.invalid && numberOfPieces?.errors?.required"
+          >
+          Nombre de pièces Obligatoire.
+          </span>
           </div>
            <div class="col-span-6 sm:col-span-3">
             <label for="currentRent" class="block text-sm font-medium text-gray-700">Loyer actuel(charges comprises)</label>
-            <input type="number" placeholder="0" name="currentRent" formControlName="currentRent" id="currentRent" autocomplete="currentRent" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <input type="number" [ngClass]=" (currentRent?.invalid && currentRent?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="0" name="currentRent" formControlName="currentRent" id="currentRent" autocomplete="currentRent" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
+            <span class="text-red-600"
+            *ngIf="(currentRent?.dirty || currentRent?.touched) && currentRent?.invalid && currentRent?.errors?.required"
+          >
+           Champ Obligatoire.
+          </span>
           </div>
         <div class="col-span-6 sm:col-span-6">
             <label for="leaseInYourName" class="block text-sm font-medium text-gray-700">Le bail est-il à votre nom?</label>
@@ -78,7 +93,12 @@
             </div>
             <div class="col-span-6 sm:col-span-6">
                 <label for="refrences" class="block text-sm font-medium text-gray-700">Réferences</label>
-                <input type="text" placeholder="Réferences" name="refrences" formControlName="refrences" id="refrences" autocomplete="refrences" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <input type="text" [ngClass]=" (refrences?.invalid && refrences?.touched) ? 'border-red-500' : 'border-blue-100'" placeholder="Réferences" name="refrences" formControlName="refrences" id="refrences" autocomplete="refrences" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm rounded-md">
+                <span class="text-red-600"
+                *ngIf="(refrences?.dirty || refrences?.touched) && refrences?.invalid && refrences?.errors?.required"
+              >
+               Champ Obligatoire.
+              </span>
               </div> 
                <div class="col-span-6 sm:col-span-6">
                 <label for="possibleRemarks" class="block text-sm mb-1 font-medium text-gray-700">Remarques éventuelles</label>
